#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-01-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.94 released.

        * Added functionality to save main password in
          encrypted format with an expiration feature.


2011-01-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.93 released.

        * New service/daemon functionality now implemented.
          FullAuto can not be configured as a service/daemon.
          (Most of the change occured in the Term::Menus
           module).


2011-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.92 released.

        * New "Plan" functionality is now implemented.


2011-01-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.91 released.

        * Fixed output when entire output returns in one
          string (happens mostly on AIX).

        * Changed 'kill' on Cygwin to use kill -f instead of
          kill -9 (which gets permission denied on Windows
          2008 Server).


2011-01-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.90 released.

        * Fixed last "known" error condition when running under
          Cygwin/Windows.

        * Modified Makefile.PL to do optional registry
          modification.

        * Now forcing build and install of very latest
          BerkeleyDB in order to enhance reliability.


2010-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.89 released.

        * HAPPY NEW YEAR!!

        * Added 'Plan' functionality. (Not yet usable).


2010-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
