@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.94';
+our $VERSION='0.95';
 
 
 use 5.005;
