@@ -25,6 +25,13 @@
 ################################################################
 
 
+2011-01-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.95 released.
+
+        * More strict cleanup.
+
+
 2011-01-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.94 released.
